force-app/main/default/objects/Hot_Zip__c/Hot_Zip__c.object-meta.xml
<CustomObject>
    <description>Hot Zip Code Area Documentation</description>
    <label>Hot Zip</label>
    <nameField>
        <displayFormat>HZN-{0000000}</displayFormat>
        <label>Hot Zip Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hot Zips</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>