force-app/main/default/objects/Hot_Zip__c/fields/Zip_Code_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code_Documentation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zip Code Documentation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>