force-app/main/default/objects/Hot_Zip__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Zip_Code__c</columns>
    <columns>Active__c</columns>
    <columns>NAME</columns>
    <columns>Zip_Code_Documentation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>